# Wallet

./: AGENTS.md  readme.md
Application/: .gitignore  AGENTS.md  CLAUDE.md  CODE_STYLE.md  PATTERNS.md  eslint.config.ts  package.json  tsconfig.json  vite.config.ts
Application/docs/: AGENTS.md  ARCHITECTURE.md  intro-language-menu-spec.md  readme.md
Application/src/: app.tsx  index.html  style.css  type.d.ts
Application/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
Application/src-tauri/src/: command.rs  lib.rs  main.rs  tun.rs
Application/src/assets/lang/: en.json  fa.json
Application/src/components/: background.tsx  button.tsx  intro.import.tsx  intro.language.tsx  intro.wallet.tsx  text.tsx
Application/src/components/home/: browser.tsx  home.tsx  navigation.tsx  wallet.tsx
Application/src/core/: account.ts  wallet.ts
Application/src/hook/: platform.ts
Application/src/layout/: page.tsx  titlebar.tsx
Application/src/page/: dashboard.tsx  home.tsx  intro.tsx  splash.tsx  unlock.tsx
Application/src/utility/: context.tsx  event.ts  language.ts  storage.ts  theme.ts
