[package]
name = "GWallet"
version = "1.0.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]
tauri-build = { version = "2", features = [ ] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }

tauri-plugin-store = "2"
tauri-plugin-os = "2"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[profile.release]
lto = true
strip = true
debug = false
opt-level = 3
panic = "abort"
codegen-units = 1
